CBL-LexerParser/smallCobolParser.output
Useless nonterminals

   FileSec
   WSSec
   LinkSec
   ScrSec
   NumberClause
   IDClause


Terminals which are not used

   FILE
   WORKINGSTORAGE
   LINKAGE
   SCREEN
   SECTION
   COMMA


Useless rules

   52 FileSec: /* empty */
   53        | FILE SECTION PERIOD

   54 WSSec: /* empty */
   55      | WORKINGSTORAGE SECTION PERIOD

   56 LinkSec: /* empty */
   57        | LINKAGE SECTION PERIOD

   58 ScrSec: /* empty */
   59       | SCREEN SECTION PERIOD

   60 Expr: ADD NumberClause TO ID
   61     | ADD IDClause TO ID
   62     | ADD NUMBER TO IDClause
   63     | ADD NumberClause TO IDClause
   64     | ADD ID TO IDClause
   65     | ADD IDClause TO IDClause

   66 NumberClause: NUMBER COMMA NumberClause

   67 IDClause: ID COMMA IDClause


State 35 conflicts: 1 shift/reduce
State 66 conflicts: 12 reduce/reduce
State 75 conflicts: 12 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: Module1 Module2 Module3 Module4

    2 Module1: IDDiv ProgID

    3 Module2: DataDiv

    4 Module3: EnvDiv

    5 Module4: ProcDiv Statements StopRun

    6 ProgID: PROGRAMID PERIOD ID PERIOD

    7 Statements: /* empty */
    8           | Statement Statements

    9 Statement: PERIOD
   10          | Expr PERIOD
   11          | Expr

   12 Expr: DISPLAY STRING
   13     | ACCEPT ID
   14     | IF Condition THEN Statement ENDIF
   15     | PERFORM Statement UNTIL COUNT Operator NUMBER
   16     | PERFORM Statement NUMBER TIMES
   17     | DoubleDigit ID PICTURE IS Nines
   18     | DoubleDigit ID PIC Nines
   19     | DoubleDigit ID PIC IntPicClause
   20     | DoubleDigit ID PICTURE IS FloatClause
   21     | DoubleDigit ID PIC FloatClause
   22     | DoubleDigit ID PICTURE IS UnsignedClause
   23     | DoubleDigit ID PIC UnsignedClause
   24     | DoubleDigit ID PICTURE IS Xs
   25     | DoubleDigit ID PIC Xs
   26     | DoubleDigit ID PIC StringPicClause
   27     | ADD NUMBER TO ID
   28     | ADD ID TO ID

   29 Condition: ID Operator ID
   30          | ID Operator NUMBER

   31 Operator: GT_OP
   32         | LT_OP
   33         | EQ_OP
   34         | DOUBLE_EQ_OP
   35         | GT_EQ_OP
   36         | LT_EQ_OP

   37 DoubleDigit: /* empty */
   38            | DIGIT DIGIT

   39 Nines: /* empty */
   40      | NINE Nines

   41 Xs: /* empty */
   42   | LETTERX Xs

   43 IntPicClause: NINE OPEN_PARENTHESES NUMBER CLOSE_PARENTHESES

   44 FloatClause: Nines LETTERV Nines

   45 UnsignedClause: LETTERS Nines

   46 StringPicClause: LETTERX OPEN_PARENTHESES NUMBER CLOSE_PARENTHESES

   47 IDDiv: IDENTIFICATION DIVISION PERIOD

   48 DataDiv: DATA DIVISION PERIOD

   49 EnvDiv: ENVIRIONMENT DIVISION PERIOD

   50 ProcDiv: PROCEDURE DIVISION PERIOD

   51 StopRun: STOP RUN PERIOD


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 15 16 27 30 43 46
DIGIT (259) 38
ID (260) 6 13 17 18 19 20 21 22 23 24 25 26 27 28 29 30
STRING (261) 12
IDENTIFICATION (262) 47
ENVIRIONMENT (263) 49
DATA (264) 48
FILE (265)
WORKINGSTORAGE (266)
LINKAGE (267)
SCREEN (268)
SECTION (269)
PROCEDURE (270) 50
DIVISION (271) 47 48 49 50
PROGRAMID (272) 6
DISPLAY (273) 12
ACCEPT (274) 13
STOP (275) 51
RUN (276) 51
IF (277) 14
THEN (278) 14
ENDIF (279) 14
PERFORM (280) 15 16
UNTIL (281) 15
COUNT (282) 15
TIMES (283) 16
PICTURE (284) 17 20 22 24
PIC (285) 18 19 21 23 25 26
IS (286) 17 20 22 24
TO (287) 27 28
PERIOD (288) 6 9 10 47 48 49 50 51
COMMA (289)
GT_OP (290) 31
LT_OP (291) 32
EQ_OP (292) 33
DOUBLE_EQ_OP (293) 34
GT_EQ_OP (294) 35
LT_EQ_OP (295) 36
OPEN_PARENTHESES (296) 43 46
CLOSE_PARENTHESES (297) 43 46
ADD (298) 27 28
NINE (299) 40 43
LETTERV (300) 44
LETTERS (301) 45
LETTERX (302) 42 46


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
Program (49)
    on left: 1, on right: 0
Module1 (50)
    on left: 2, on right: 1
Module2 (51)
    on left: 3, on right: 1
Module3 (52)
    on left: 4, on right: 1
Module4 (53)
    on left: 5, on right: 1
ProgID (54)
    on left: 6, on right: 2
Statements (55)
    on left: 7 8, on right: 5 8
Statement (56)
    on left: 9 10 11, on right: 8 14 15 16
Expr (57)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28,
    on right: 10 11
Condition (58)
    on left: 29 30, on right: 14
Operator (59)
    on left: 31 32 33 34 35 36, on right: 15 29 30
DoubleDigit (60)
    on left: 37 38, on right: 17 18 19 20 21 22 23 24 25 26
Nines (61)
    on left: 39 40, on right: 17 18 40 44 45
Xs (62)
    on left: 41 42, on right: 24 25 42
IntPicClause (63)
    on left: 43, on right: 19
FloatClause (64)
    on left: 44, on right: 20 21
UnsignedClause (65)
    on left: 45, on right: 22 23
StringPicClause (66)
    on left: 46, on right: 26
IDDiv (67)
    on left: 47, on right: 2
DataDiv (68)
    on left: 48, on right: 3
EnvDiv (69)
    on left: 49, on right: 4
ProcDiv (70)
    on left: 50, on right: 5
StopRun (71)
    on left: 51, on right: 5


state 0

    0 $accept: . Program $end

    IDENTIFICATION  shift, and go to state 1

    Program  go to state 2
    Module1  go to state 3
    IDDiv    go to state 4


state 1

   47 IDDiv: IDENTIFICATION . DIVISION PERIOD

    DIVISION  shift, and go to state 5


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


state 3

    1 Program: Module1 . Module2 Module3 Module4

    DATA  shift, and go to state 7

    Module2  go to state 8
    DataDiv  go to state 9


state 4

    2 Module1: IDDiv . ProgID

    PROGRAMID  shift, and go to state 10

    ProgID  go to state 11


state 5

   47 IDDiv: IDENTIFICATION DIVISION . PERIOD

    PERIOD  shift, and go to state 12


state 6

    0 $accept: Program $end .

    $default  accept


state 7

   48 DataDiv: DATA . DIVISION PERIOD

    DIVISION  shift, and go to state 13


state 8

    1 Program: Module1 Module2 . Module3 Module4

    ENVIRIONMENT  shift, and go to state 14

    Module3  go to state 15
    EnvDiv   go to state 16


state 9

    3 Module2: DataDiv .

    $default  reduce using rule 3 (Module2)


state 10

    6 ProgID: PROGRAMID . PERIOD ID PERIOD

    PERIOD  shift, and go to state 17


state 11

    2 Module1: IDDiv ProgID .

    $default  reduce using rule 2 (Module1)


state 12

   47 IDDiv: IDENTIFICATION DIVISION PERIOD .

    $default  reduce using rule 47 (IDDiv)


state 13

   48 DataDiv: DATA DIVISION . PERIOD

    PERIOD  shift, and go to state 18


state 14

   49 EnvDiv: ENVIRIONMENT . DIVISION PERIOD

    DIVISION  shift, and go to state 19


state 15

    1 Program: Module1 Module2 Module3 . Module4

    PROCEDURE  shift, and go to state 20

    Module4  go to state 21
    ProcDiv  go to state 22


state 16

    4 Module3: EnvDiv .

    $default  reduce using rule 4 (Module3)


state 17

    6 ProgID: PROGRAMID PERIOD . ID PERIOD

    ID  shift, and go to state 23


state 18

   48 DataDiv: DATA DIVISION PERIOD .

    $default  reduce using rule 48 (DataDiv)


state 19

   49 EnvDiv: ENVIRIONMENT DIVISION . PERIOD

    PERIOD  shift, and go to state 24


state 20

   50 ProcDiv: PROCEDURE . DIVISION PERIOD

    DIVISION  shift, and go to state 25


state 21

    1 Program: Module1 Module2 Module3 Module4 .

    $default  reduce using rule 1 (Program)


state 22

    5 Module4: ProcDiv . Statements StopRun

    DIGIT    shift, and go to state 26
    DISPLAY  shift, and go to state 27
    ACCEPT   shift, and go to state 28
    IF       shift, and go to state 29
    PERFORM  shift, and go to state 30
    PERIOD   shift, and go to state 31
    ADD      shift, and go to state 32

    ID        reduce using rule 37 (DoubleDigit)
    $default  reduce using rule 7 (Statements)

    Statements   go to state 33
    Statement    go to state 34
    Expr         go to state 35
    DoubleDigit  go to state 36


state 23

    6 ProgID: PROGRAMID PERIOD ID . PERIOD

    PERIOD  shift, and go to state 37


state 24

   49 EnvDiv: ENVIRIONMENT DIVISION PERIOD .

    $default  reduce using rule 49 (EnvDiv)


state 25

   50 ProcDiv: PROCEDURE DIVISION . PERIOD

    PERIOD  shift, and go to state 38


state 26

   38 DoubleDigit: DIGIT . DIGIT

    DIGIT  shift, and go to state 39


state 27

   12 Expr: DISPLAY . STRING

    STRING  shift, and go to state 40


state 28

   13 Expr: ACCEPT . ID

    ID  shift, and go to state 41


state 29

   14 Expr: IF . Condition THEN Statement ENDIF

    ID  shift, and go to state 42

    Condition  go to state 43


state 30

   15 Expr: PERFORM . Statement UNTIL COUNT Operator NUMBER
   16     | PERFORM . Statement NUMBER TIMES

    DIGIT    shift, and go to state 26
    DISPLAY  shift, and go to state 27
    ACCEPT   shift, and go to state 28
    IF       shift, and go to state 29
    PERFORM  shift, and go to state 30
    PERIOD   shift, and go to state 31
    ADD      shift, and go to state 32

    $default  reduce using rule 37 (DoubleDigit)

    Statement    go to state 44
    Expr         go to state 35
    DoubleDigit  go to state 36


state 31

    9 Statement: PERIOD .

    $default  reduce using rule 9 (Statement)


state 32

   27 Expr: ADD . NUMBER TO ID
   28     | ADD . ID TO ID

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46


state 33

    5 Module4: ProcDiv Statements . StopRun

    STOP  shift, and go to state 47

    StopRun  go to state 48


state 34

    8 Statements: Statement . Statements

    DIGIT    shift, and go to state 26
    DISPLAY  shift, and go to state 27
    ACCEPT   shift, and go to state 28
    IF       shift, and go to state 29
    PERFORM  shift, and go to state 30
    PERIOD   shift, and go to state 31
    ADD      shift, and go to state 32

    ID        reduce using rule 37 (DoubleDigit)
    $default  reduce using rule 7 (Statements)

    Statements   go to state 49
    Statement    go to state 34
    Expr         go to state 35
    DoubleDigit  go to state 36


state 35

   10 Statement: Expr . PERIOD
   11          | Expr .

    PERIOD  shift, and go to state 50

    PERIOD    [reduce using rule 11 (Statement)]
    $default  reduce using rule 11 (Statement)


state 36

   17 Expr: DoubleDigit . ID PICTURE IS Nines
   18     | DoubleDigit . ID PIC Nines
   19     | DoubleDigit . ID PIC IntPicClause
   20     | DoubleDigit . ID PICTURE IS FloatClause
   21     | DoubleDigit . ID PIC FloatClause
   22     | DoubleDigit . ID PICTURE IS UnsignedClause
   23     | DoubleDigit . ID PIC UnsignedClause
   24     | DoubleDigit . ID PICTURE IS Xs
   25     | DoubleDigit . ID PIC Xs
   26     | DoubleDigit . ID PIC StringPicClause

    ID  shift, and go to state 51


state 37

    6 ProgID: PROGRAMID PERIOD ID PERIOD .

    $default  reduce using rule 6 (ProgID)


state 38

   50 ProcDiv: PROCEDURE DIVISION PERIOD .

    $default  reduce using rule 50 (ProcDiv)


state 39

   38 DoubleDigit: DIGIT DIGIT .

    $default  reduce using rule 38 (DoubleDigit)


state 40

   12 Expr: DISPLAY STRING .

    $default  reduce using rule 12 (Expr)


state 41

   13 Expr: ACCEPT ID .

    $default  reduce using rule 13 (Expr)


state 42

   29 Condition: ID . Operator ID
   30          | ID . Operator NUMBER

    GT_OP         shift, and go to state 52
    LT_OP         shift, and go to state 53
    EQ_OP         shift, and go to state 54
    DOUBLE_EQ_OP  shift, and go to state 55
    GT_EQ_OP      shift, and go to state 56
    LT_EQ_OP      shift, and go to state 57

    Operator  go to state 58


state 43

   14 Expr: IF Condition . THEN Statement ENDIF

    THEN  shift, and go to state 59


state 44

   15 Expr: PERFORM Statement . UNTIL COUNT Operator NUMBER
   16     | PERFORM Statement . NUMBER TIMES

    NUMBER  shift, and go to state 60
    UNTIL   shift, and go to state 61


state 45

   27 Expr: ADD NUMBER . TO ID

    TO  shift, and go to state 62


state 46

   28 Expr: ADD ID . TO ID

    TO  shift, and go to state 63


state 47

   51 StopRun: STOP . RUN PERIOD

    RUN  shift, and go to state 64


state 48

    5 Module4: ProcDiv Statements StopRun .

    $default  reduce using rule 5 (Module4)


state 49

    8 Statements: Statement Statements .

    $default  reduce using rule 8 (Statements)


state 50

   10 Statement: Expr PERIOD .

    $default  reduce using rule 10 (Statement)


state 51

   17 Expr: DoubleDigit ID . PICTURE IS Nines
   18     | DoubleDigit ID . PIC Nines
   19     | DoubleDigit ID . PIC IntPicClause
   20     | DoubleDigit ID . PICTURE IS FloatClause
   21     | DoubleDigit ID . PIC FloatClause
   22     | DoubleDigit ID . PICTURE IS UnsignedClause
   23     | DoubleDigit ID . PIC UnsignedClause
   24     | DoubleDigit ID . PICTURE IS Xs
   25     | DoubleDigit ID . PIC Xs
   26     | DoubleDigit ID . PIC StringPicClause

    PICTURE  shift, and go to state 65
    PIC      shift, and go to state 66


state 52

   31 Operator: GT_OP .

    $default  reduce using rule 31 (Operator)


state 53

   32 Operator: LT_OP .

    $default  reduce using rule 32 (Operator)


state 54

   33 Operator: EQ_OP .

    $default  reduce using rule 33 (Operator)


state 55

   34 Operator: DOUBLE_EQ_OP .

    $default  reduce using rule 34 (Operator)


state 56

   35 Operator: GT_EQ_OP .

    $default  reduce using rule 35 (Operator)


state 57

   36 Operator: LT_EQ_OP .

    $default  reduce using rule 36 (Operator)


state 58

   29 Condition: ID Operator . ID
   30          | ID Operator . NUMBER

    NUMBER  shift, and go to state 67
    ID      shift, and go to state 68


state 59

   14 Expr: IF Condition THEN . Statement ENDIF

    DIGIT    shift, and go to state 26
    DISPLAY  shift, and go to state 27
    ACCEPT   shift, and go to state 28
    IF       shift, and go to state 29
    PERFORM  shift, and go to state 30
    PERIOD   shift, and go to state 31
    ADD      shift, and go to state 32

    $default  reduce using rule 37 (DoubleDigit)

    Statement    go to state 69
    Expr         go to state 35
    DoubleDigit  go to state 36


state 60

   16 Expr: PERFORM Statement NUMBER . TIMES

    TIMES  shift, and go to state 70


state 61

   15 Expr: PERFORM Statement UNTIL . COUNT Operator NUMBER

    COUNT  shift, and go to state 71


state 62

   27 Expr: ADD NUMBER TO . ID

    ID  shift, and go to state 72


state 63

   28 Expr: ADD ID TO . ID

    ID  shift, and go to state 73


state 64

   51 StopRun: STOP RUN . PERIOD

    PERIOD  shift, and go to state 74


state 65

   17 Expr: DoubleDigit ID PICTURE . IS Nines
   20     | DoubleDigit ID PICTURE . IS FloatClause
   22     | DoubleDigit ID PICTURE . IS UnsignedClause
   24     | DoubleDigit ID PICTURE . IS Xs

    IS  shift, and go to state 75


state 66

   18 Expr: DoubleDigit ID PIC . Nines
   19     | DoubleDigit ID PIC . IntPicClause
   21     | DoubleDigit ID PIC . FloatClause
   23     | DoubleDigit ID PIC . UnsignedClause
   25     | DoubleDigit ID PIC . Xs
   26     | DoubleDigit ID PIC . StringPicClause

    NINE     shift, and go to state 76
    LETTERS  shift, and go to state 77
    LETTERX  shift, and go to state 78

    NUMBER    reduce using rule 39 (Nines)
    NUMBER    [reduce using rule 41 (Xs)]
    DIGIT     reduce using rule 39 (Nines)
    DIGIT     [reduce using rule 41 (Xs)]
    ID        reduce using rule 39 (Nines)
    ID        [reduce using rule 41 (Xs)]
    DISPLAY   reduce using rule 39 (Nines)
    DISPLAY   [reduce using rule 41 (Xs)]
    ACCEPT    reduce using rule 39 (Nines)
    ACCEPT    [reduce using rule 41 (Xs)]
    STOP      reduce using rule 39 (Nines)
    STOP      [reduce using rule 41 (Xs)]
    IF        reduce using rule 39 (Nines)
    IF        [reduce using rule 41 (Xs)]
    ENDIF     reduce using rule 39 (Nines)
    ENDIF     [reduce using rule 41 (Xs)]
    PERFORM   reduce using rule 39 (Nines)
    PERFORM   [reduce using rule 41 (Xs)]
    UNTIL     reduce using rule 39 (Nines)
    UNTIL     [reduce using rule 41 (Xs)]
    PERIOD    reduce using rule 39 (Nines)
    PERIOD    [reduce using rule 41 (Xs)]
    ADD       reduce using rule 39 (Nines)
    ADD       [reduce using rule 41 (Xs)]
    $default  reduce using rule 39 (Nines)

    Nines            go to state 79
    Xs               go to state 80
    IntPicClause     go to state 81
    FloatClause      go to state 82
    UnsignedClause   go to state 83
    StringPicClause  go to state 84


state 67

   30 Condition: ID Operator NUMBER .

    $default  reduce using rule 30 (Condition)


state 68

   29 Condition: ID Operator ID .

    $default  reduce using rule 29 (Condition)


state 69

   14 Expr: IF Condition THEN Statement . ENDIF

    ENDIF  shift, and go to state 85


state 70

   16 Expr: PERFORM Statement NUMBER TIMES .

    $default  reduce using rule 16 (Expr)


state 71

   15 Expr: PERFORM Statement UNTIL COUNT . Operator NUMBER

    GT_OP         shift, and go to state 52
    LT_OP         shift, and go to state 53
    EQ_OP         shift, and go to state 54
    DOUBLE_EQ_OP  shift, and go to state 55
    GT_EQ_OP      shift, and go to state 56
    LT_EQ_OP      shift, and go to state 57

    Operator  go to state 86


state 72

   27 Expr: ADD NUMBER TO ID .

    $default  reduce using rule 27 (Expr)


state 73

   28 Expr: ADD ID TO ID .

    $default  reduce using rule 28 (Expr)


state 74

   51 StopRun: STOP RUN PERIOD .

    $default  reduce using rule 51 (StopRun)


state 75

   17 Expr: DoubleDigit ID PICTURE IS . Nines
   20     | DoubleDigit ID PICTURE IS . FloatClause
   22     | DoubleDigit ID PICTURE IS . UnsignedClause
   24     | DoubleDigit ID PICTURE IS . Xs

    NINE     shift, and go to state 87
    LETTERS  shift, and go to state 77
    LETTERX  shift, and go to state 88

    NUMBER    reduce using rule 39 (Nines)
    NUMBER    [reduce using rule 41 (Xs)]
    DIGIT     reduce using rule 39 (Nines)
    DIGIT     [reduce using rule 41 (Xs)]
    ID        reduce using rule 39 (Nines)
    ID        [reduce using rule 41 (Xs)]
    DISPLAY   reduce using rule 39 (Nines)
    DISPLAY   [reduce using rule 41 (Xs)]
    ACCEPT    reduce using rule 39 (Nines)
    ACCEPT    [reduce using rule 41 (Xs)]
    STOP      reduce using rule 39 (Nines)
    STOP      [reduce using rule 41 (Xs)]
    IF        reduce using rule 39 (Nines)
    IF        [reduce using rule 41 (Xs)]
    ENDIF     reduce using rule 39 (Nines)
    ENDIF     [reduce using rule 41 (Xs)]
    PERFORM   reduce using rule 39 (Nines)
    PERFORM   [reduce using rule 41 (Xs)]
    UNTIL     reduce using rule 39 (Nines)
    UNTIL     [reduce using rule 41 (Xs)]
    PERIOD    reduce using rule 39 (Nines)
    PERIOD    [reduce using rule 41 (Xs)]
    ADD       reduce using rule 39 (Nines)
    ADD       [reduce using rule 41 (Xs)]
    $default  reduce using rule 39 (Nines)

    Nines           go to state 89
    Xs              go to state 90
    FloatClause     go to state 91
    UnsignedClause  go to state 92


state 76

   40 Nines: NINE . Nines
   43 IntPicClause: NINE . OPEN_PARENTHESES NUMBER CLOSE_PARENTHESES

    OPEN_PARENTHESES  shift, and go to state 93
    NINE              shift, and go to state 87

    $default  reduce using rule 39 (Nines)

    Nines  go to state 94


state 77

   45 UnsignedClause: LETTERS . Nines

    NINE  shift, and go to state 87

    $default  reduce using rule 39 (Nines)

    Nines  go to state 95


state 78

   42 Xs: LETTERX . Xs
   46 StringPicClause: LETTERX . OPEN_PARENTHESES NUMBER CLOSE_PARENTHESES

    OPEN_PARENTHESES  shift, and go to state 96
    LETTERX           shift, and go to state 88

    $default  reduce using rule 41 (Xs)

    Xs  go to state 97


state 79

   18 Expr: DoubleDigit ID PIC Nines .
   44 FloatClause: Nines . LETTERV Nines

    LETTERV  shift, and go to state 98

    $default  reduce using rule 18 (Expr)


state 80

   25 Expr: DoubleDigit ID PIC Xs .

    $default  reduce using rule 25 (Expr)


state 81

   19 Expr: DoubleDigit ID PIC IntPicClause .

    $default  reduce using rule 19 (Expr)


state 82

   21 Expr: DoubleDigit ID PIC FloatClause .

    $default  reduce using rule 21 (Expr)


state 83

   23 Expr: DoubleDigit ID PIC UnsignedClause .

    $default  reduce using rule 23 (Expr)


state 84

   26 Expr: DoubleDigit ID PIC StringPicClause .

    $default  reduce using rule 26 (Expr)


state 85

   14 Expr: IF Condition THEN Statement ENDIF .

    $default  reduce using rule 14 (Expr)


state 86

   15 Expr: PERFORM Statement UNTIL COUNT Operator . NUMBER

    NUMBER  shift, and go to state 99


state 87

   40 Nines: NINE . Nines

    NINE  shift, and go to state 87

    $default  reduce using rule 39 (Nines)

    Nines  go to state 94


state 88

   42 Xs: LETTERX . Xs

    LETTERX  shift, and go to state 88

    $default  reduce using rule 41 (Xs)

    Xs  go to state 97


state 89

   17 Expr: DoubleDigit ID PICTURE IS Nines .
   44 FloatClause: Nines . LETTERV Nines

    LETTERV  shift, and go to state 98

    $default  reduce using rule 17 (Expr)


state 90

   24 Expr: DoubleDigit ID PICTURE IS Xs .

    $default  reduce using rule 24 (Expr)


state 91

   20 Expr: DoubleDigit ID PICTURE IS FloatClause .

    $default  reduce using rule 20 (Expr)


state 92

   22 Expr: DoubleDigit ID PICTURE IS UnsignedClause .

    $default  reduce using rule 22 (Expr)


state 93

   43 IntPicClause: NINE OPEN_PARENTHESES . NUMBER CLOSE_PARENTHESES

    NUMBER  shift, and go to state 100


state 94

   40 Nines: NINE Nines .

    $default  reduce using rule 40 (Nines)


state 95

   45 UnsignedClause: LETTERS Nines .

    $default  reduce using rule 45 (UnsignedClause)


state 96

   46 StringPicClause: LETTERX OPEN_PARENTHESES . NUMBER CLOSE_PARENTHESES

    NUMBER  shift, and go to state 101


state 97

   42 Xs: LETTERX Xs .

    $default  reduce using rule 42 (Xs)


state 98

   44 FloatClause: Nines LETTERV . Nines

    NINE  shift, and go to state 87

    $default  reduce using rule 39 (Nines)

    Nines  go to state 102


state 99

   15 Expr: PERFORM Statement UNTIL COUNT Operator NUMBER .

    $default  reduce using rule 15 (Expr)


state 100

   43 IntPicClause: NINE OPEN_PARENTHESES NUMBER . CLOSE_PARENTHESES

    CLOSE_PARENTHESES  shift, and go to state 103


state 101

   46 StringPicClause: LETTERX OPEN_PARENTHESES NUMBER . CLOSE_PARENTHESES

    CLOSE_PARENTHESES  shift, and go to state 104


state 102

   44 FloatClause: Nines LETTERV Nines .

    $default  reduce using rule 44 (FloatClause)


state 103

   43 IntPicClause: NINE OPEN_PARENTHESES NUMBER CLOSE_PARENTHESES .

    $default  reduce using rule 43 (IntPicClause)


state 104

   46 StringPicClause: LETTERX OPEN_PARENTHESES NUMBER CLOSE_PARENTHESES .

    $default  reduce using rule 46 (StringPicClause)
